--- a/css/main.css
+++ b/css/main.css
@@ -231,31 +231,36 @@ p {
   padding-left: 25px;
 }
 .page-wrapper.toggled .sidebar-wrapper {
+  overflow: auto;
   left: 0;
   width: 250px;
 }
-.page-wrapper.toggled .page-content, .page-wrapper.toggled .page-content header {
+
+.page-wrapper.toggled .page-content {
   padding-left: 250px;
 }
 .page-wrapper.toggled .page-content header{
-  position: fixed;
+  position: sticky;
+  top: 0px;
   z-index: 800;
   left: 0px;
   width: 100%;
+  z-index: 2;
 }
-.page-wrapper.toggled .page-content section{
-  margin-top: 68px;
+.page-wrapper .page-content header{
+  position: relative;
+  z-index: 2;
 }
+
 .page-wrapper .page-content {
   display: inline-block;
   width: 100%;
   padding-left: 50px;
-  overflow-x: hidden;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 #sidebar {
-  z-index: 100000;
+  z-index: 1000;
 }
 .sidebar-wrapper .nav-item .nav-link,
 .sidebar-wrapper .dropdown-menu .dropdown-item {
@@ -330,6 +335,7 @@ p {
 .card-freetrial,
 .card-currentplan{
   bottom: 10px;
+  margin-bottom: 20px;
   /*position: absolute;*/
 }
 .card-freetrial .card{
@@ -402,7 +408,6 @@ p {
 }
 /*===== Complete Profile Card ======*/
 .card-completeprofile{
-  width: 300px;
   margin-left: auto;
 }
 .card-completeprofile .card-title{
@@ -544,12 +549,14 @@ p {
   border-top-right-radius: 10px;
 }
 .inner-sidebar{
-  width: 300px;
+  width: 230px;
   height: 100%;
   position: fixed;
   background-color: #FAFAFB;
   border-right: 1px solid #E9ECEF;
-  top: 68px;
+  top: 0px;
+  overflow: auto;
+  padding-top: 56px;
 }
 .inner-side-head{
   padding: 8px 8px 8px 15px;
@@ -573,13 +580,46 @@ p {
   color: white;
 }
 .beside-inner-sidebar{
-  padding-left: 315px;
+  padding-left: 245px;
+}
+.listed-bottom{
+  transform: translate3d(0px, 35px, 0px)!important;
+}
+@media screen and (min-width: 1200px){
+  .tabs-extractor .nav-tabs.justify-content-center {
+    justify-content: center !important;
+  }
+}
+@media screen and (min-width: 701px){
+  .inner-side-list button {
+    display: none;
+  }
+  .inner-side-list .dropdown-menu {
+    position: relative !important;
+    transform: translate3d(0px, 0px, 0px) !important;
+    float: none !important;
+    background-color: transparent !important;
+    border: none !important;
+    display: block !important;
+    z-index: 0;
+  }
+  .inner-side-list .inner-side-search {
+    padding: 0px !important;
+  }
+
 }
 @media screen and (max-width: 700px){
+  .sidebar-reverse {
+    display: flex;
+    flex-direction: column-reverse;
+  }
   .inner-sidebar {
     position: relative;
     width: 100%;
     top: 0px;
+    padding-top: 0px;
+    background-color: transparent;
+    overflow: visible;
   }
   .toggled .inner-sidebar {
     top: 68px;
@@ -607,7 +647,7 @@ p {
   border-top: 0;
   border-right: 0;
   border-left: 0;
-  border-bottom: 2px solid #E9ECEF;
+  border-bottom: 2px solid transparent;
 }
 .tabs-extractor .nav-tabs .nav-item .nav-link.active,
 .tabs-extractor .nav-tabs .nav-item .nav-link.focus,
@@ -682,8 +722,18 @@ p {
   .page-wrapper.toggled .sidebar-wrapper #close-sidebar {
     display: inline;
   }
+
 }
 
+.tabs-extractor .nav-tabs {
+  justify-content: left;
+  flex-wrap: nowrap !important;
+  overflow-x: auto;
+}
+
+.nav-tabs .nav-item {
+  margin-bottom: 0px !important;
+}
 
 .wizard-nav a i {
   display: none;
@@ -713,5 +763,5 @@ p {
 }
 
 .custom-control-label {
-  top: 3px;
+  top: -1px;
 }
